// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="default_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="default_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.breadcrumb.list - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.breadcrumb.list_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.breadcrumb.list_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.breadcrumb.list",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.content.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.content.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.content.style",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.footer.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.footer.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.footer.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <FooterBlock
          blockId="properties.footer.style_footer"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.footer.style",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.color - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.header.color_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "color": "#3f51b5",
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.header.color_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.header.color",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.header.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "border": "5px solid blue",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.header.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.header.style",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.theme: light - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.header.theme: light_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
              "theme": "light",
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.header.theme: light_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.header.theme: light",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.logo.alt - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.logo.alt_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.logo.alt_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.logo.alt",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.logo.src - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.logo.src_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.logo.src_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.logo.src",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.logo.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.logo.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.logo.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.logo.style",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.menu - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.menu_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.menu_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\"}}",
      "id": "properties.menu",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <HeaderBlock
          blockId="properties.style_header"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "border": "5px solid blue",
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\",\\"border\\":\\"5px solid blue\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "alignItems": "center",
                "display": "flex",
                "lg": Object {
                  "padding": "0 46px",
                },
                "md": Object {
                  "padding": "0 30px",
                },
                "padding": "0 46px",
                "sm": Object {
                  "padding": "0 15px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <ContentBlock
          blockId="properties.style_content"
          content={
            Object {
              "content": [Function],
            }
          }
          events={Object {}}
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "makeCssClass": [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "border": "5px solid blue",
                      "minHeight": "100vh",
                    },
                  ],
                ],
                "results": Array [
                  Object {
                    "type": "return",
                    "value": "{\\"style\\":{\\"minHeight\\":\\"100vh\\",\\"border\\":\\"5px solid blue\\"}}",
                  },
                ],
              },
              "registerEvent": [Function],
              "registerMethod": [Function],
              "triggerEvent": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "lg": Object {
                  "padding": "0 40px 40px 40px",
                },
                "md": Object {
                  "padding": "0 20px 20px 20px",
                },
                "padding": "0 40px 40px 40px",
                "sm": Object {
                  "padding": "0 10px 10px 10px",
                },
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "{\\"style\\":{\\"minHeight\\":\\"100vh\\",\\"border\\":\\"5px solid blue\\"}}",
      "id": "properties.style",
    },
    Object {},
  ],
]
`;
